# Major-Project-SRM

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ingestion/: build_vector_db.py  drugbank_parser.py  fda_parser.py
src/major_project_rag/: __init__.py  __main__.py  cli.py  config.py
src/major_project_rag/ingestion/: __init__.py  chroma_index.py  chunking.py  drugbank_vocab.py  fda_parse.py  pinecone_index.py  pubmed_extract.py
src/major_project_rag/rag/: __init__.py  drug_normalization.py  intent_filter.py
src/rag/: input_processing.py
